--- a/css/body.css
+++ b/css/body.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
-  height: 100%;
+  /* height: 100%; */
   margin: 5% auto;
   padding: 30px;
   border: 2px solid #ccc;
