--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
 }
 footer {
-  background: #140b5c;
+  background: rgb(14, 45, 85);
   width: 100%;
   bottom: 0;
   left: 0;
@@ -50,10 +50,10 @@ footer .content .top {
   transition: all 0.4s ease;
 }
 .top .media-icons a:nth-child(1) {
-  background: #4267b2;
+  background: rgb(14, 45, 85);
 }
 .top .media-icons a:nth-child(1):hover {
-  color: #4267b2;
+  background: rgb(14, 45, 85);
   background: #fff;
 }
 .top .media-icons a:nth-child(2) {
@@ -145,7 +145,7 @@ footer .content .link-boxes .box {
 }
 .link-boxes .input-box input[type="button"] {
   background: #fff;
-  color: #140b5c;
+  background: rgb(14, 45, 85);
   border: none;
   font-size: 18px;
   font-weight: 500;
