--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #333;
+  background: rgb(14, 45, 85);
   overflow: hidden;
 }
 
@@ -28,6 +28,6 @@
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background: rgb(65, 141, 240);
   color: white;
 }
