--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,3 +190,45 @@ img {
 .card-custom:hover .card-custom-image img {
   transform: scale(1.1);
 }
+
+/* content  */
+
+#contact .form-control {
+  background-color: var(--color-base);
+  border: 2px solid var(--color-base);
+  color: var(--color-body);
+}
+
+#contact .form-control:focus {
+  box-shadow: none;
+  border: 2px solid var(--color-brand2);
+}
+
+#contact .form-control::placeholder {
+  color: var(--color-body);
+}
+#contact input.form-control {
+  height: 50px;
+}
+
+/* SOCIA MEDIA ICONS */
+
+.social-icons {
+}
+
+.social-icons a {
+  width: 50px;
+  height: 50px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-base);
+  border-radius: 100px;
+}
+
+.social-icons a i {
+  font-size: 20px;
+  color: var(--color-brand2);
+  width: 20px;
+  height: 20px;
+}
