--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,19 +176,33 @@ img {
 
 .card-custom {
   width: 90%;
+  height: 100%;
   overflow: hidden;
 }
 
+/* burada bir hata var */
 .card-custom .card-custom-image {
   overflow: hidden;
+  width: 90%;
+  height: 200px;
 }
 
 .card-custom .card-custom-image img {
   transition: all 0.4s ease;
+  background-color: red;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .card-custom:hover .card-custom-image img {
   transform: scale(1.1);
+}
+
+.card-custom-content {
+}
+
+.cardView {
+  width: 100%;
 }
 
 /* content  */
@@ -231,4 +245,21 @@ img {
   color: var(--color-brand2);
   width: 20px;
   height: 20px;
+}
+
+/* footer-text */
+
+.footer-text {
+  color: var(--color-brand2);
+}
+
+.service {
+  height: 100%;
+}
+
+/* Sertifikalar alanı hakkında css kodları. */
+
+.card-sertifikalar {
+  width: 50%;
+  overflow: hidden;
 }
